add installtion instructions and update setup to include dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ long_description_content_type = text/markdown
 url = https://github.com/aws-samples/amazon-sagemaker-gigapixel-satellite-imagery-detectron2
 
 project_urls =
-#    Blog = aws.bloh
+#    Blog = aws.blogs
     Source = https://github.com/aws-samples/amazon-sagemaker-gigapixel-satellite-imagery-detectron2
     Tracker = https://github.com/aws-samples/amazon-sagemaker-gigapixel-satellite-imagery-detectron2/issues
 
@@ -34,6 +34,8 @@ python_requires = >=3.8
 install_requires =
     torch>=1.10.1
     torchvision>=0.11.2
+    rasterio
+    pycocotools~=2.0.0
 
 [options.packages.find]
 where = src
